      multiarch-packagename strings
    - load the dpkg base arguments only one time and reuse them later
  * cmdline/apt-get.cc:
    - follow Provides in the evaluation of saving candidates, too, for
      statisfying garbage package dependencies (Closes: #640590)
  * apt-pkg/algorithms.cc:
    - if a package is garbage, don't try to save it with FixByInstall

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 14 Sep 2011 21:01:56 +0200

apt (0.8.15.8) unstable; urgency=low

  [ David Kalnischkies ]
  * cmdline/apt-get.cc:
    - output list of virtual package providers to c1out in -q=1
      instead of /dev/null to unbreak sbuild (LP: #816155)
  
  [ Michael Vogt ]
  * apt-pkg/contrib/configuration.cc:
    - fix double delete (LP: #848907)
    - ignore only the invalid regexp instead of all options

 -- Michael Vogt <mvo@debian.org>  Wed, 14 Sep 2011 12:08:25 +0200

apt (0.8.15.7) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/packagemanager.cc, apt-pkg/pkgcache.cc:
    - ignore "self"-conflicts for all architectures of a package
      instead of just for the architecture of the package look at
      in the ordering of installations, too (LP: #802901)
    - M-A:same lockstep unpack should operate on installed
      packages first (LP: #835625)
  * test/*
    - reorganize the various testcases and helper we have and
      integrate them better into the buildsystem
    - run the test/libapt testcases at package build-time
  * debian/apt.symbols:
    - add the newly added symbols since 0.8.15.3
  * cmdline/apt-get.cc:
    - remove the binary caches in 'apt-get clean' as it is the first
      thing recommend by many supporters in case of APT segfaults
    - remove the caches in 'apt-get update', too, as they will be
      invalid in most cases anyway
  * apt-pkg/acquire-item.cc:
    - if no Release.gpg file is found try to verify with hashes,
      but do not fail if a hash can't be found
  * apt-pkg/acquire.cc: