@@ -13,8 +13,10 @@ apt (0.8.15.9) UNRELEASED; urgency=low
       statisfying garbage package dependencies (Closes: #640590)
   * apt-pkg/algorithms.cc:
     - if a package is garbage, don't try to save it with FixByInstall
+  * apt-pkg/init.cc:
+    - silently ignore *.orig and *.save files by default
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 14 Sep 2011 21:01:56 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 21 Sep 2011 19:36:45 +0200
 
 apt (0.8.15.8) unstable; urgency=low
 
